--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,13 +7,8 @@
 		"--userns=keep-id"
 	],
 	"containerEnv": {
-		"HOME": "/home/vscode"
-	},
-	"remoteEnv": {
-		"HOME": "/home/vscode"
-	},
-	"containerUser": "vscode",
-	"remoteUser": "vscode"
+	  "HOME": "/home/node"
+	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
